--- a/app/src/main/res/layout/fragment_main_three.xml
+++ b/app/src/main/res/layout/fragment_main_three.xml
@@ -1,23 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <include layout="@layout/title_main_ranking" />
 
-    <com.scwang.smartrefresh.layout.SmartRefreshLayout
-        android:id="@id/refreshView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/bg_common">
 
-        <ListView
-            android:id="@id/listView"
-            style="@style/lv_default_style"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+    <android.support.design.widget.TabLayout
+        android:id="@id/tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="@dimen/dp_10"
+        android:layout_marginEnd="@dimen/dp_10"
+        android:background="@color/white"
+        app:tabIndicatorColor="@color/theme"
+        app:tabIndicatorHeight="1dp"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/theme"
+        app:tabTextAppearance="@style/TabLayoutTextStyle"
+        app:tabTextColor="@color/color_gray_6" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/content_divider" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
 </LinearLayout>
