--- a/app/src/main/res/layout/activity_click_detailed.xml
+++ b/app/src/main/res/layout/activity_click_detailed.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@id/refreshView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg_common"
     android:orientation="vertical">
 
-    <TextView
-        style="@style/small_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp_15"
-        android:text="点击明细" />
+    <ListView
+        android:id="@id/listView"
+        style="@style/lv_default_style"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/bg_common"
+        android:dividerHeight="0dp" />
 
-</LinearLayout>
+</com.scwang.smartrefresh.layout.SmartRefreshLayout>
