--- a/app/src/main/res/layout/activity_team_manager.xml
+++ b/app/src/main/res/layout/activity_team_manager.xml
@@ -130,19 +130,37 @@
             android:layout_marginTop="@dimen/dp_20"
             android:layout_marginEnd="@dimen/dp_15"
             android:layout_marginBottom="@dimen/dp_10"
-            android:background="@color/white"
+            android:background="@color/color_gray_f"
             app:cardCornerRadius="@dimen/dp_6"
             app:cardElevation="@null">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp_10"
-                android:layout_marginTop="@dimen/dp_10"
-                android:layout_marginEnd="@dimen/dp_10"
-                android:layout_marginBottom="@dimen/dp_10"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:background="@color/white"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/team_click_count"
+                        style="@style/small_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:text="团队点击"
+                        android:textColor="@color/black" />
+                </LinearLayout>
+
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/lineChart"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:background="@color/color_gray_f" />
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
